# Script

./: README.md
OpenRAVE_test/record_video/: openrave.mpg  record_video.py
collision_checking /: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  collision_checker  collision_checking.cpp  test.cpp
collision_checking /include/: collision_checking.hpp
collision_checking /pcd/: input1.pcd
collision_checking /src/: test.cpp
eigen_test/cross_product/: CMakeLists.txt  CMakeLists.txt~  cross_product.cpp
eigen_test/hello_world/: my_program
eigen_test/search_rectangles/: CMakeLists.txt  search_rectangles.cpp  search_rectangles.hpp
pcl_test/box_pcl/: CMakeCache.txt  CMakeLists.txt  Makefile  box.pcd  box_pcd  box_pcd.cpp  cmake_install.cmake
pcl_test/crop_box/: CMakeCache.txt  CMakeLists.txt  Makefile  box.pcd  cmake_install.cmake  crop_box  crop_box.cpp  output_cloud.pcd
pcl_test/extract_indices/: CMakeCache.txt  Makefile  cmake_install.cmake  extract_indices  extract_indices.cpp  table_scene_lms400_plane_0.pcd  table_scene_lms400_plane_1.pcd  table_scene_lms400_plane_2.pcd  test_pcd.pcd
pcl_test/pcl_visualizer/: CMakeCache.txt  Makefile  cmake_install.cmake  pcl_visualizer_demo
pcl_test/plane_detector/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  planar_segmentation  planar_segmentation.cpp
pcl_test/pose_estimation/: CMakeCache.txt  Makefile  alignment_prerejective  cmake_install.cmake  downy.pcd  downy_dense.pcd  object_model.pcd
pcl_test/reconstruct_surface/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  extract_indices  matrix.txt  matrix_supplement.txt  reconstruct_surface  reconstruct_surface.cpp  table_scene_lms400_downsampled.pcd  table_scene_lms400_plane_0.pcd  test_pcd_lms400_downsampled.pcd
pcl_test/rotation_transform/: CMakeCache.txt  CMakeLists.txt  Makefile  after_rotation.pcd  cmake_install.cmake  rotation_transform  rotation_transform.cpp  test_pcd.pcd
